syntax = "proto3";
package wormhole_foundation.wormholechain.tokenbridge;

option go_package = "github.com/wormhole-foundation/wormhole-chain/x/tokenbridge/types";



message CoinMetaRollbackProtection {
  string index = 1; 
  uint64 lastUpdateSequence = 2;
}

